<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tjcrew.pokerpalv2.PlayerInformation">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dealerButton"
        android:id="@+id/textView1"
        android:paddingEnd="20dip"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/textView1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/playerName"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stack"
        android:id="@+id/textView2"
        android:paddingEnd="25dip"/>







    <Button
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="populateInfoConfirm"/>

</RelativeLayout>
