<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tjcrew.pokerpalv2.NewGameOptions">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gameOptions"
        android:padding="10dip"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cashGame" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tournament"
        android:layout_alignParentEnd="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch1"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/switch1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingTop="10dip"
        android:text="@string/startingStack" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:gravity="center"
        android:layout_below="@id/textView1" />

    <Button
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="confirm"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingTop="10dip"
        android:text="@string/smallBlind" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingTop="10dip"
        android:layout_alignParentEnd="true"
        android:text="@string/bigBlind" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:gravity="center"
        android:layout_below="@id/textView4" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/textView4" />


</RelativeLayout>
